--- a/index.html
+++ b/index.html
@@ -8,10 +8,123 @@
 </head>
 <body>
 
-<div class="alert alert-primary" role="alert">Test</div>
+<div class="container">
+    <div class="alert alert-primary" role="alert">Test</div>
+    
+    <div class="row mx-auto mt-3">
+        <div class="input-group col-8">
+            <h1 class="display-5">Stackoverflow</h1>
+            <div class="col-sm-6 d-flex align-items-center">
+                <input type="text" class="form-control" id="inputSearch" placeholder="Search">
+            </div>
+        </div>
+        <div class="col-4 d-flex align-items-center">
+            <a href="#" class="link-dark px-2">Log In</a>
+            <a href="#" class="link-dark px-2">Register</a>
+        </div>
+    </div>
+    <hr>
+    <div class="row mx-auto">
+        <div id="mainbar" class="col-8">
+            <div class="row">
+                <div class="col-3">
+                    <img src="ava.jpg" class="img-thumbnail mx-auto d-block" alt="...">    
+                    <div class="input-group">
+                        <span class="input-group-btn">
+                            <button type="button" class="btn btn-default btn-number" data-type="minus" data-field="quant[1]">-</button>
+                        </span>
+                        <input type="qty" name="qty" class="qty form-control input-number" value="1" min="1" max="10">
+                        <span class="input-group-btn">
+                            <button type="button" class="btn btn-default btn-number" data-type="plus" data-field="quant[1]">+</button>
+                        </span>
+                    </div>
+                </div>
+                <div class="col-9">
+                    <div class="mb-4">
+                    <h2>How to build a moon park ?</h2>
+                    <p>Lorem ipsum - dolar sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euisemod tincisunt ut laateet dolore mogna aliquam erat volutopat. Ut wisi enim ad minim veniom, quis nosteous exerci tation ex ea commodo conqusat.</p>
+                    <a href="#" class="tag link-primary">#black-jack</a>
+                    <a href="#" class="tag link-secondary">#bender</a>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="card mb-3" style="max-width: 100%;">
+                <div class="row g-0">
+                    <div class="col-md-3">
+                        <div class="mt-4 mb-4 ml-4">
+                            <img src="ava.jpg" class="img-thumbnail mx-auto d-block" alt="...">
+                            <div class="input-group">
+                            <span class="input-group-btn">
+                                <button type="button" class="btn btn-default btn-number" data-type="minus" data-field="quant[1]">-</button>
+                            </span>
+                            <input type="text" name="quant[1]" class="form-control input-number" value="1" min="1" max="10">
+                            <span class="input-group-btn">
+                                <button type="button" class="btn btn-default btn-number" data-type="plus" data-field="quant[1]">+</button>
+                            </span>
+                        </div>
+                    </div>
+                    </div>
+                    <div class="col-md-9">
+                    <div class="card-body">
+                        <p class="card-text">First of all I wold like to thank you for the invitation to participate in such a Russia is the huge territory which in many respects needds to be render habitable.</p>
+                    </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card mb-3" style="max-width: 100%;">
+                <div class="row g-0">
+                    <div class="col-md-3">
+                        <div class="mt-4 mb-4 ml-4">
+                            <img src="ava.jpg" class="img-thumbnail mx-auto d-block" alt="...">
+                            <div class="input-group">
+                            <span class="input-group-btn">
+                                <button type="button" class="btn btn-default btn-number" data-type="minus" data-field="quant[1]">-</button>
+                            </span>
+                            <input type="text" name="quant[1]" class="form-control input-number" value="1" min="1" max="10">
+                            <span class="input-group-btn">
+                                <button type="button" class="btn btn-default btn-number" data-type="plus" data-field="quant[1]">+</button>
+                            </span>
+                        </div>
+                    </div>
+                    </div>
+                    <div class="col-md-9">
+                    <div class="card-body">
+                        <p class="card-text">First of all I wold like to thank you for the invitation to participate in such a Russia is the huge territory which in many respects needds to be render habitable.</p>
+                    </div>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div>
+                <textarea class="col-12" rows="3" placeholder="Enter your answer here" required></textarea>
+                <button type="button" class="btn btn-primary">Answer</button>
+            </div>
+        </div>
+        <div id="sidebar" class="col-4">
+            <div class="mb-4">
+            <h2>Popular Tags</h2>
+            <a href="#" class="tag link-primary">#courcera</a>
+            <a href="#" class="tag link-secondary">#python</a>
+            <a href="#" class="tag link-success">#mysql</a>
+            <a href="#" class="tag link-danger">#django</a>
+            </div>
+            <div class="mb-4">
+            <h2>Best Members</h2>
+            <ul class="list-unstyled">
+            <li><a href="#" class="link-primary">Mr. Freeman</a></li>
+            <li><a href="#" class="link-secondary">Dr. House</a></li>
+            <li><a href="#" class="link-success">Bender</a></li>
+            <li><a href="#" class="link-danger">Queen Victoria</a></li>
+            </ul>
+            </div>
+        </div>
+    </div>
+</div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+<script src="index.js" type="text/javascript"></script>
 </body>
 </html>
