--- a/index.html
+++ b/index.html
@@ -2,53 +2,64 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Dmitry Korzunin</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
 </head>
-<body>
+<body class="bg-light">
 
-<div class="container">
-    <div class="alert alert-primary" role="alert">Test</div>
-    
-    <div class="row mx-auto mt-3">
-        <div class="input-group col-8">
-            <h1 class="display-5">Stackoverflow</h1>
-            <div class="col-sm-6 d-flex align-items-center">
-                <input type="text" class="form-control" id="inputSearch" placeholder="Search">
-            </div>
-        </div>
-        <div class="col-4 d-flex align-items-center">
-            <a href="#" class="link-dark px-2">Log In</a>
-            <a href="#" class="link-dark px-2">Register</a>
-        </div>
-    </div>
-    <hr>
-    <div class="row mx-auto">
-        <div id="mainbar" class="col-8">
+<div class="container shadow-lg bg-white rounded mt-3 mb-3">
+	<div class="row">
+		<div class="col-md-8 mt-4 mb-4">
+			<div class="row">
+				<div class="col-md-4">
+					<img src="ava.jpg" class="img-thumbnail mx-auto d-block rounded-circle" alt="...">
+				</div>
+				<div class="col-md-8">
+					<h1>Dmitry Korzunin</h1>
+					<h4>Python Developer</h4>
+                    <p><h3>Details</h3></p>
+					<p>Phone: +79024429799</p>
+                    <p>E-mail: k79024429799@gmail.com</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-12">
+					<h3>Profile:</h3>
+					<p>Python, SQL, VBA developer with 5+ years experience</p>
+				</div>
+			</div>
             <div class="row">
-                <div class="col-3">
-                    <img src="ava.jpg" class="img-thumbnail mx-auto d-block" alt="...">    
-                    <div class="input-group">
-                        <span class="input-group-btn">
-                            <button type="button" class="btn btn-default btn-number" data-type="minus" data-field="quant[1]">-</button>
-                        </span>
-                        <input type="qty" name="qty" class="qty form-control input-number" value="1" min="1" max="10">
-                        <span class="input-group-btn">
-                            <button type="button" class="btn btn-default btn-number" data-type="plus" data-field="quant[1]">+</button>
-                        </span>
+				<div class="col-md-12">
+					<h3>Websites & Social Links</h3>
+					<p>
+						<a href="https://github.com/kordimsan" target="_blank" rel="noopener noreferrer"></a> <img src="mark-github.svg" height="30px"></a>
+						<a href="https://wakatime.com/@kordim" target="_blank" rel="noopener noreferrer"><img src="wakatime.svg" height="30px"></a>
+						<a href="https://www.facebook.com/kordimsan/" target="_blank" rel="noopener noreferrer"><img src="facebook.svg" height="30px"></a>
+					</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-12">
+					<h3>Employment History:</h3>
+					<h4>Full stack developer at Sberbank</h4>
+                    <p>ms SQL developer, python developer, nlp, chat bot creator, VBA developer,</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-12">
+					<h3>Education:</h3>
+					<h4>Stocks and bonds market at University of Economics</h4>
+                    <p>Studied economics and finance of the securities market, technical analysis, fundamental analysis, financial indicators</p>
+				</div>
+			</div>
+                    <div class="col-md-9">
+                    <div class="card-body">
+                        <p class="card-text">First of all I wold like to thank you for the invitation to participate in such a Russia is the huge territory which in many respects needds to be render habitable.</p>
+                    </div>
                     </div>
                 </div>
-                <div class="col-9">
-                    <div class="mb-4">
-                    <h2>How to build a moon park ?</h2>
-                    <p>Lorem ipsum - dolar sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euisemod tincisunt ut laateet dolore mogna aliquam erat volutopat. Ut wisi enim ad minim veniom, quis nosteous exerci tation ex ea commodo conqusat.</p>
-                    <a href="#" class="tag link-primary">#black-jack</a>
-                    <a href="#" class="tag link-secondary">#bender</a>
-                    </div>
-                </div>
-            </div>
-            <hr>
+					</div>
             <div class="card mb-3" style="max-width: 100%;">
                 <div class="row g-0">
                     <div class="col-md-3">
@@ -62,64 +73,47 @@
                             <span class="input-group-btn">
                                 <button type="button" class="btn btn-default btn-number" data-type="plus" data-field="quant[1]">+</button>
                             </span>
-                        </div>
-                    </div>
-                    </div>
-                    <div class="col-md-9">
-                    <div class="card-body">
-                        <p class="card-text">First of all I wold like to thank you for the invitation to participate in such a Russia is the huge territory which in many respects needds to be render habitable.</p>
-                    </div>
-                    </div>
-                </div>
-            </div>
-            <div class="card mb-3" style="max-width: 100%;">
-                <div class="row g-0">
-                    <div class="col-md-3">
-                        <div class="mt-4 mb-4 ml-4">
-                            <img src="ava.jpg" class="img-thumbnail mx-auto d-block" alt="...">
-                            <div class="input-group">
-                            <span class="input-group-btn">
-                                <button type="button" class="btn btn-default btn-number" data-type="minus" data-field="quant[1]">-</button>
-                            </span>
-                            <input type="text" name="quant[1]" class="form-control input-number" value="1" min="1" max="10">
-                            <span class="input-group-btn">
-                                <button type="button" class="btn btn-default btn-number" data-type="plus" data-field="quant[1]">+</button>
-                            </span>
-                        </div>
-                    </div>
-                    </div>
-                    <div class="col-md-9">
-                    <div class="card-body">
-                        <p class="card-text">First of all I wold like to thank you for the invitation to participate in such a Russia is the huge territory which in many respects needds to be render habitable.</p>
-                    </div>
-                    </div>
-                </div>
-            </div>
-            <hr>
-            <div>
-                <textarea class="col-12" rows="3" placeholder="Enter your answer here" required></textarea>
-                <button type="button" class="btn btn-primary">Answer</button>
-            </div>
-        </div>
-        <div id="sidebar" class="col-4">
-            <div class="mb-4">
-            <h2>Popular Tags</h2>
-            <a href="#" class="tag link-primary">#courcera</a>
-            <a href="#" class="tag link-secondary">#python</a>
-            <a href="#" class="tag link-success">#mysql</a>
-            <a href="#" class="tag link-danger">#django</a>
-            </div>
-            <div class="mb-4">
-            <h2>Best Members</h2>
-            <ul class="list-unstyled">
-            <li><a href="#" class="link-primary">Mr. Freeman</a></li>
-            <li><a href="#" class="link-secondary">Dr. House</a></li>
-            <li><a href="#" class="link-success">Bender</a></li>
-            <li><a href="#" class="link-danger">Queen Victoria</a></li>
-            </ul>
-            </div>
-        </div>
-    </div>
+					</div>
+			</div>
+			<div class="row">
+				<div class="col-md-12">
+					<h3>Courses:</h3>
+					<p>Create a Python Application using PyMongo and MongoDB Database</p>
+					<p>SQL for Data Science</p>
+				</div>
+			</div>
+					</div>
+					</div>
+			</div>
+			<div class="row">
+				<div class="col-md-12">
+					<h3>Language:</h3>
+					<p>English - B1</p>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-4 bg-dark text-white rounded-right">
+			<div class="mt-4 mb-4">
+				<h1 class="mt-4">Skills</h1>
+				Python<div class="progress"><div class="progress-bar w-75">Experienced</div></div>
+				Excel VBA<div class="progress"><div class="progress-bar w-100">Expert</div></div>
+				SQL<div class="progress"><div class="progress-bar w-75">Experienced</div></div>
+				MongoDB<div class="progress"><div class="progress-bar w-50">Skillful</div></div>
+				GIT<div class="progress"><div class="progress-bar w-75">Experienced</div></div>
+				Jinja2<div class="progress"><div class="progress-bar w-50">Skillful</div></div>
+				JavaScript<div class="progress"><div class="progress-bar w-25">Beginner</div></div>
+				Docker<div class="progress"><div class="progress-bar w-25">Beginner</div></div>
+				React<div class="progress"><div class="progress-bar w-25">Beginner</div></div>
+				Flask<div class="progress"><div class="progress-bar w-75">Experienced</div></div>
+				Django<div class="progress"><div class="progress-bar w-50">Skillful</div></div>
+				Pandas<div class="progress"><div class="progress-bar w-75">Experienced</div></div>
+				GraphQL<div class="progress"><div class="progress-bar w-25">Beginner</div></div>
+				HTML/CSS<div class="progress"><div class="progress-bar w-75">Experienced</div></div>
+				Bash<div class="progress"><div class="progress-bar w-75">Experienced</div></div>
+				<div class="mt-4"><figure><embed src="https://wakatime.com/share/@kordim/7a58b80c-b861-45b5-b3fb-ce597e4cf2c7.svg"></embed></figure></div>
+			</div>
+		</div>
+	</div>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
