--- a/index.html
+++ b/index.html
@@ -33,63 +33,93 @@
 				<div class="col-md-12">
 					<h3>Websites & Social Links</h3>
 					<p>
-						<a href="https://github.com/kordimsan" target="_blank" rel="noopener noreferrer"></a> <img src="mark-github.svg" height="30px"></a>
+						<a href="https://github.com/kordimsan" target="_blank" rel="noopener noreferrer"><img src="mark-github.svg" height="30px"></a>
 						<a href="https://wakatime.com/@kordim" target="_blank" rel="noopener noreferrer"><img src="wakatime.svg" height="30px"></a>
 						<a href="https://www.facebook.com/kordimsan/" target="_blank" rel="noopener noreferrer"><img src="facebook.svg" height="30px"></a>
 					</p>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-md-12">
-					<h3>Employment History:</h3>
-					<h4>Full stack developer at Sberbank</h4>
-                    <p>ms SQL developer, python developer, nlp, chat bot creator, VBA developer,</p>
+			<div class="list-group">
+				<h3>Employment History:</h3>
+				<a href="https://www.sberbank.ru/" target="_blank" class="list-group-item list-group-item-action flex-column align-items-start">
+					<div class="d-flex w-100 justify-content-between">
+					<h5 class="mb-1">Full stack developer at Sberbank</h5>
+					<small class="text-muted">2013 - Nowadays</small>
+					</div>
+					<p class="mb-1">MSSQL developer, python developer, nlp, chat bot creator, VBA developer</p>
+					<small class="text-muted">www.sberbank.ru</small>
+				</a>
+				<a href="https://skbbank.ru/" target="_blank" class="list-group-item list-group-item-action flex-column align-items-start">
+					<div class="d-flex w-100 justify-content-between">
+					<h5 class="mb-1">Lead Credit Manager as SKB-bank</h5>
+					<small class="text-muted">2007 - 2013</small>
+					</div>
+					<p class="mb-1">Sales, support of credit transactions, work with clients, reports automation.</p>
+					<small class="text-muted">skbbank.ru</small>
+				</a>
+			</div>
+			<div class="list-group">
+				<h3>Education:</h3>
+				<a href="#" class="list-group-item list-group-item-action flex-column align-items-start" data-toggle="modal" data-target=".diploma1">
+					<div class="d-flex w-100 justify-content-between">
+					<h5 class="mb-1">Stocks and bonds market at University of Economics</h5>
+					<small class="text-muted">2001 - 2006</small>
+					</div>
+					<p class="mb-1">Studied economics and finance of the securities market, technical analysis, fundamental analysis, financial indicators</p>
+					<small class="text-muted">Diploma</small>
+				</a>
+				<a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+					<div class="d-flex w-100 justify-content-between">
+					<h5 class="mb-1">Self-Education</h5>
+					<small class="text-muted">2013 - Nowadays</small>
+					</div>
+					<p class="mb-1">Python, OOP, Desigh patterns, Data structures.</p>
+					<small class="text-muted">No Diploma</small>
+				</a>
+			</div>
+			<div class="modal fade diploma1" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+				<div class="modal-dialog modal-lg">
+					<div class="modal-content">
+						<img src="photo_2019-05-06_09-02-27.jpg">
+					</div>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-md-12">
-					<h3>Education:</h3>
-					<h4>Stocks and bonds market at University of Economics</h4>
-                    <p>Studied economics and finance of the securities market, technical analysis, fundamental analysis, financial indicators</p>
+			<div class="list-group">
+				<h3>Courses:</h3>
+				<a href="#" class="list-group-item list-group-item-action flex-column align-items-start" data-toggle="modal" data-target=".bd-example-modal-lg1">
+					<div class="d-flex w-100 justify-content-between">
+					<h5 class="mb-1">Create a Python Application using PyMongo and MongoDB Database</h5>
+					<small class="text-muted">January 2021</small>
+					</div>
+				</a>
+				<a href="#" class="list-group-item list-group-item-action flex-column align-items-start" data-toggle="modal" data-target=".bd-example-modal-lg2">
+					<div class="d-flex w-100 justify-content-between">
+					<h5 class="mb-1">SQL for Data Science</h5>
+					<small class="text-muted">October 2020</small>
+					</div>
+				</a>
+			</div>
+			<div class="modal fade bd-example-modal-lg1" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+				<div class="modal-dialog modal-lg">
+					<div class="modal-content">
+						<img src="2021-03-14_19-47-43.png">
+					</div>
 				</div>
 			</div>
-                    <div class="col-md-9">
-                    <div class="card-body">
-                        <p class="card-text">First of all I wold like to thank you for the invitation to participate in such a Russia is the huge territory which in many respects needds to be render habitable.</p>
-                    </div>
-                    </div>
-                </div>
+			<div class="modal fade bd-example-modal-lg2" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+				<div class="modal-dialog modal-lg">
+					<div class="modal-content">
+						<img src="photo_2021-01-13_11-31-32.jpg">
 					</div>
-            <div class="card mb-3" style="max-width: 100%;">
-                <div class="row g-0">
-                    <div class="col-md-3">
-                        <div class="mt-4 mb-4 ml-4">
-                            <img src="ava.jpg" class="img-thumbnail mx-auto d-block" alt="...">
-                            <div class="input-group">
-                            <span class="input-group-btn">
-                                <button type="button" class="btn btn-default btn-number" data-type="minus" data-field="quant[1]">-</button>
-                            </span>
-                            <input type="text" name="quant[1]" class="form-control input-number" value="1" min="1" max="10">
-                            <span class="input-group-btn">
-                                <button type="button" class="btn btn-default btn-number" data-type="plus" data-field="quant[1]">+</button>
-                            </span>
-					</div>
-			</div>
-			<div class="row">
-				<div class="col-md-12">
-					<h3>Courses:</h3>
-					<p>Create a Python Application using PyMongo and MongoDB Database</p>
-					<p>SQL for Data Science</p>
 				</div>
 			</div>
+			<div class="list-group">
+				<h3>Language:</h3>
+				<a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+					<div class="d-flex w-100 justify-content-between">
+					<h5 class="mb-1">English - B1</h5>
 					</div>
-					</div>
-			</div>
-			<div class="row">
-				<div class="col-md-12">
-					<h3>Language:</h3>
-					<p>English - B1</p>
-				</div>
+				</a>
 			</div>
 		</div>
 		<div class="col-md-4 bg-dark text-white rounded-right">
