--- a/index.html
+++ b/index.html
@@ -89,13 +89,19 @@
 				<a href="#" class="list-group-item list-group-item-action flex-column align-items-start" data-toggle="modal" data-target=".bd-example-modal-lg1">
 					<div class="d-flex w-100 justify-content-between">
 					<h5 class="mb-1">Create a Python Application using PyMongo and MongoDB Database</h5>
-					<small class="text-muted">January 2021</small>
+					<small class="text-muted">Jan. 2021</small>
 					</div>
 				</a>
 				<a href="#" class="list-group-item list-group-item-action flex-column align-items-start" data-toggle="modal" data-target=".bd-example-modal-lg2">
 					<div class="d-flex w-100 justify-content-between">
 					<h5 class="mb-1">SQL for Data Science</h5>
-					<small class="text-muted">October 2020</small>
+					<small class="text-muted">Oct. 2020</small>
+					</div>
+				</a>
+				<a href="#" class="list-group-item list-group-item-action flex-column align-items-start" data-toggle="modal" data-target=".bd-example-modal-lg3">
+					<div class="d-flex w-100 justify-content-between">
+					<h5 class="mb-1">SoloLearn Certificates</h5>
+					<small class="text-muted">Nov. 2018</small>
 					</div>
 				</a>
 			</div>
@@ -110,6 +116,51 @@
 				<div class="modal-dialog modal-lg">
 					<div class="modal-content">
 						<img src="photo_2021-01-13_11-31-32.jpg">
+					</div>
+				</div>
+			</div>
+			<div class="modal fade bd-example-modal-lg3" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+				<div class="modal-dialog modal-lg">
+					<div class="modal-content">
+						<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+							<ol class="carousel-indicators">
+							  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+							  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+							  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+							  <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+							  <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+							  <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+							  <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+							  <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+							  <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
+							  <li data-target="#carouselExampleIndicators" data-slide-to="9"></li>
+							  <li data-target="#carouselExampleIndicators" data-slide-to="10"></li>
+							  <li data-target="#carouselExampleIndicators" data-slide-to="11"></li>
+							  <li data-target="#carouselExampleIndicators" data-slide-to="12"></li>
+							</ol>
+							<div class="carousel-inner">
+							  <div class="carousel-item active"><img class="d-block w-100" src="SoloLearn\photo_2021-03-14_20-00-45.jpg" alt="1"></div>
+							  <div class="carousel-item"><img class="d-block w-100" src="SoloLearn\photo_2021-03-14_20-02-03.jpg" alt="2"></div>
+							  <div class="carousel-item"><img class="d-block w-100" src="SoloLearn\photo_2021-03-14_20-02-07.jpg" alt="3"></div>
+							  <div class="carousel-item"><img class="d-block w-100" src="SoloLearn\photo_2021-03-14_20-02-11.jpg" alt="4"></div>
+							  <div class="carousel-item"><img class="d-block w-100" src="SoloLearn\photo_2021-03-14_20-02-14.jpg" alt="5"></div>
+							  <div class="carousel-item"><img class="d-block w-100" src="SoloLearn\photo_2021-03-14_20-02-17.jpg" alt="6"></div>
+							  <div class="carousel-item"><img class="d-block w-100" src="SoloLearn\photo_2021-03-14_20-02-20.jpg" alt="7"></div>
+							  <div class="carousel-item"><img class="d-block w-100" src="SoloLearn\photo_2021-03-14_20-02-23.jpg" alt="8"></div>
+							  <div class="carousel-item"><img class="d-block w-100" src="SoloLearn\photo_2021-03-14_20-02-25.jpg" alt="9"></div>
+							  <div class="carousel-item"><img class="d-block w-100" src="SoloLearn\photo_2021-03-14_20-02-28.jpg" alt="10"></div>
+							  <div class="carousel-item"><img class="d-block w-100" src="SoloLearn\photo_2021-03-14_20-02-37.jpg" alt="11"></div>
+							  <div class="carousel-item"><img class="d-block w-100" src="SoloLearn\photo_2021-03-14_20-02-42.jpg" alt="12"></div>
+							</div>
+							<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+							  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+							  <span class="sr-only">Previous</span>
+							</a>
+							<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+							  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+							  <span class="sr-only">Next</span>
+							</a>
+						  </div>
 					</div>
 				</div>
 			</div>
