--- a/index.html
+++ b/index.html
@@ -86,6 +86,12 @@
 			</div>
 			<div class="list-group">
 				<h3>Courses:</h3>
+				<a href="#" class="list-group-item list-group-item-action flex-column align-items-start" data-toggle="modal" data-target=".webpy">
+					<div class="d-flex w-100 justify-content-between">
+					<h5 class="mb-1">Writing Web services with python</h5>
+					<small class="text-muted">Mar. 2021</small>
+					</div>
+				</a>
 				<a href="#" class="list-group-item list-group-item-action flex-column align-items-start" data-toggle="modal" data-target=".oop">
 					<div class="d-flex w-100 justify-content-between">
 					<h5 class="mb-1">OOP and Design patterns</h5>
@@ -110,6 +116,13 @@
 					<small class="text-muted">Nov. 2018</small>
 					</div>
 				</a>
+			</div>
+			<div class="modal fade webpy" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+				<div class="modal-dialog modal-lg">
+					<div class="modal-content">
+						<img src="2021-03-18_10-49-00.png">
+					</div>
+				</div>
 			</div>
 			<div class="modal fade oop" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
 				<div class="modal-dialog modal-lg">
