--- a/index.html
+++ b/index.html
@@ -110,6 +110,12 @@
 					<small class="text-muted">Oct. 2020</small>
 					</div>
 				</a>
+				<a href="#" class="list-group-item list-group-item-action flex-column align-items-start" data-toggle="modal" data-target=".sap-fiori-overview">
+					<div class="d-flex w-100 justify-content-between">
+					<h5 class="mb-1">SAP Fiori Overview: Design, Develop and Deploy</h5>
+					<small class="text-muted">Jul. 2020</small>
+					</div>
+				</a>
 				<a href="#" class="list-group-item list-group-item-action flex-column align-items-start" data-toggle="modal" data-target=".bd-example-modal-lg3">
 					<div class="d-flex w-100 justify-content-between">
 					<h5 class="mb-1">SoloLearn Certificates</h5>
@@ -142,6 +148,13 @@
 				<div class="modal-dialog modal-lg">
 					<div class="modal-content">
 						<img src="photo_2021-01-13_11-31-32.jpg">
+					</div>
+				</div>
+			</div>
+			<div class="modal fade sap-fiori-overview" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+				<div class="modal-dialog modal-lg">
+					<div class="modal-content">
+						<img src="fiori3_ConfirmationOfParticipation-1.png">
 					</div>
 				</div>
 			</div>
