--- a/index.html
+++ b/index.html
@@ -205,11 +205,18 @@
 			</div>
 			<div class="list-group">
 				<h3>Language:</h3>
-				<a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+				<a href="#" class="list-group-item list-group-item-action flex-column align-items-start" data-toggle="modal" data-target=".english">
 					<div class="d-flex w-100 justify-content-between">
 					<h5 class="mb-1">English - B1</h5>
 					</div>
 				</a>
+			</div>
+			<div class="modal fade english" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+				<div class="modal-dialog modal-lg">
+					<div class="modal-content">
+						<img src="photo_2021-03-30_22-04-55.jpg">
+					</div>
+				</div>
 			</div>
 		</div>
 		<div class="col-md-4 bg-dark text-white rounded-right">
