--- a/index.html
+++ b/index.html
@@ -41,10 +41,18 @@
 			</div>
 			<div class="list-group">
 				<h3>Employment History:</h3>
+				<a href="https://www.elastoo.com/" target="_blank" class="list-group-item list-group-item-action flex-column align-items-start">
+					<div class="d-flex w-100 justify-content-between">
+					<h5 class="mb-1">Backend Python developer (part time)</h5>
+					<small class="text-muted">Jul.2021 - Nowadays</small>
+					</div>
+					<p class="mb-1">Financial services and Cryptocurrency</p>
+					<small class="text-muted">www.elastoo.com</small>
+				</a>
 				<a href="https://www.sberbank.ru/" target="_blank" class="list-group-item list-group-item-action flex-column align-items-start">
 					<div class="d-flex w-100 justify-content-between">
 					<h5 class="mb-1">Full stack developer at Sberbank</h5>
-					<small class="text-muted">2013 - Nowadays</small>
+					<small class="text-muted">Dec.2013 - Nowadays</small>
 					</div>
 					<p class="mb-1">MSSQL developer, python developer, nlp, chat bot creator, VBA developer</p>
 					<small class="text-muted">www.sberbank.ru</small>
@@ -60,14 +68,6 @@
 			</div>
 			<div class="list-group">
 				<h3>Education:</h3>
-				<a href="#" class="list-group-item list-group-item-action flex-column align-items-start" data-toggle="modal" data-target=".diploma1">
-					<div class="d-flex w-100 justify-content-between">
-					<h5 class="mb-1">Stocks and bonds market at University of Economics</h5>
-					<small class="text-muted">2001 - 2006</small>
-					</div>
-					<p class="mb-1">Studied economics and finance of the securities market, technical analysis, fundamental analysis, financial indicators</p>
-					<small class="text-muted">Diploma</small>
-				</a>
 				<a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
 					<div class="d-flex w-100 justify-content-between">
 					<h5 class="mb-1">Self-Education</h5>
@@ -75,6 +75,14 @@
 					</div>
 					<p class="mb-1">Python, OOP, Desigh patterns, Data structures.</p>
 					<small class="text-muted">No Diploma</small>
+				</a>
+				<a href="#" class="list-group-item list-group-item-action flex-column align-items-start" data-toggle="modal" data-target=".diploma1">
+					<div class="d-flex w-100 justify-content-between">
+					<h5 class="mb-1">Stocks and bonds market at University of Economics</h5>
+					<small class="text-muted">2001 - 2006</small>
+					</div>
+					<p class="mb-1">Studied economics and finance of the securities market, technical analysis, fundamental analysis, financial indicators</p>
+					<small class="text-muted">Diploma</small>
 				</a>
 			</div>
 			<div class="modal fade diploma1" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
@@ -223,18 +231,20 @@
 			<div class="mt-4 mb-4">
 				<h1 class="mt-4">Skills</h1>
 				Python<div class="progress"><div class="progress-bar w-75">Experienced</div></div>
-				Excel VBA<div class="progress"><div class="progress-bar w-100">Expert</div></div>
-				SQL<div class="progress"><div class="progress-bar w-75">Experienced</div></div>
-				MongoDB<div class="progress"><div class="progress-bar w-50">Skillful</div></div>
+				Flask<div class="progress"><div class="progress-bar w-75">Experienced</div></div>
+				FastAPI<div class="progress"><div class="progress-bar w-75">Experienced</div></div>
+				Django<div class="progress"><div class="progress-bar w-50">Skillful</div></div>
+				MongoDB<div class="progress"><div class="progress-bar w-75">Experienced</div></div>
 				GIT<div class="progress"><div class="progress-bar w-75">Experienced</div></div>
+				CI/CD<div class="progress"><div class="progress-bar w-50">Skillful</div></div>
 				Jinja2<div class="progress"><div class="progress-bar w-50">Skillful</div></div>
 				JavaScript<div class="progress"><div class="progress-bar w-25">Beginner</div></div>
 				Docker<div class="progress"><div class="progress-bar w-25">Beginner</div></div>
 				React<div class="progress"><div class="progress-bar w-25">Beginner</div></div>
-				Flask<div class="progress"><div class="progress-bar w-75">Experienced</div></div>
-				Django<div class="progress"><div class="progress-bar w-50">Skillful</div></div>
 				Pandas<div class="progress"><div class="progress-bar w-75">Experienced</div></div>
 				GraphQL<div class="progress"><div class="progress-bar w-25">Beginner</div></div>
+				Excel VBA<div class="progress"><div class="progress-bar w-100">Expert</div></div>
+				SQL<div class="progress"><div class="progress-bar w-100">Expert</div></div>
 				HTML/CSS<div class="progress"><div class="progress-bar w-75">Experienced</div></div>
 				Bash<div class="progress"><div class="progress-bar w-75">Experienced</div></div>
 				<div class="mt-4"><figure><embed src="https://wakatime.com/share/@kordim/7a58b80c-b861-45b5-b3fb-ce597e4cf2c7.svg"></embed></figure></div>
