add poetry info

--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
 			<div class="mt-4 mb-4">
 				<h1 class="mt-4">Skills</h1>
 				Python<div class="progress"><div class="progress-bar w-75">Experienced</div></div>
+				Poetry<div class="progress"><div class="progress-bar w-75">Experienced</div></div>
 				Flask<div class="progress"><div class="progress-bar w-75">Experienced</div></div>
 				FastAPI<div class="progress"><div class="progress-bar w-75">Experienced</div></div>
 				Django<div class="progress"><div class="progress-bar w-50">Skillful</div></div>
