--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 				Jinja2<div class="progress"><div class="progress-bar w-50">Skillful</div></div>
 				JavaScript<div class="progress"><div class="progress-bar w-25">Beginner</div></div>
 				Docker<div class="progress"><div class="progress-bar w-25">Beginner</div></div>
-				React<div class="progress"><div class="progress-bar w-25">Beginner</div></div>
+				React<div class="progress"><div class="progress-bar w-50">Skillful</div></div>
 				Pandas<div class="progress"><div class="progress-bar w-75">Experienced</div></div>
 				GraphQL<div class="progress"><div class="progress-bar w-25">Beginner</div></div>
 				Excel VBA<div class="progress"><div class="progress-bar w-100">Expert</div></div>
