add codewars bage

--- a/index.html
+++ b/index.html
@@ -249,6 +249,10 @@
 				HTML/CSS<div class="progress"><div class="progress-bar w-75">Experienced</div></div>
 				Bash<div class="progress"><div class="progress-bar w-75">Experienced</div></div>
 				<div class="mt-4"><figure><embed src="https://wakatime.com/share/@kordim/7a58b80c-b861-45b5-b3fb-ce597e4cf2c7.svg"></embed></figure></div>
+				<div class="mt-4">
+					<a href="https://www.codewars.com/users/kordim/" target="_blank" ">
+						<img style="width: 100%" src="https://www.codewars.com/users/kordim/badges/large"/>
+					</a></div>
 			</div>
 		</div>
 	</div>
