--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
 						<p>
 							<h3>Details</h3>
 						</p>
-						<p>Phone: +79024429799</p>
-						<p>E-mail: k79024429799@gmail.com</p>
+						<p>Phone: <a href="tel:+79024429799" target="_blank" rel="noopener noreferrer">+79024429799</a></p>
+						<p>Telegram: <a href="https://t.me/dmitry_korzunin" target="_blank"
+								rel="noopener noreferrer">@dmitry_korzunin</a></p>
+						<p>E-mail: <a href="mailto:k79024429799@gmail.com">k79024429799@gmail.com</a></p>
 					</div>
 				</div>
 				<div class="row">
