--- a/index.html
+++ b/index.html
@@ -313,59 +313,29 @@
 			<div class="col-md-4 bg-dark text-white rounded-right">
 				<div class="mt-4 mb-4">
 					<h1 class="mt-4">Skills</h1>
-					Python<div class="progress">
+					Python, Poetry, Pip<div class="progress">
 						<div class="progress-bar w-75">Experienced</div>
 					</div>
-					Poetry<div class="progress">
+					FastAPI, Flask, Django<div class="progress">
 						<div class="progress-bar w-75">Experienced</div>
 					</div>
-					Flask<div class="progress">
+					Celery, Dramatiq, TaskIQ<div class="progress">
 						<div class="progress-bar w-75">Experienced</div>
 					</div>
-					FastAPI<div class="progress">
+					MongoDB, Postgres, MS SQL, Orecle<div class="progress">
 						<div class="progress-bar w-75">Experienced</div>
 					</div>
-					Django<div class="progress">
+					GIT, CI/CD, GitLab CI, Docker, Bash<div class="progress">
+						<div class="progress-bar w-75">Experienced</div>
+					</div>
+					JavaScript, React, HTML/CSS, Jinja2<div class="progress">
 						<div class="progress-bar w-50">Skillful</div>
 					</div>
-					MongoDB<div class="progress">
+					GraphQL, REST API, gRPC, ODATA<div class="progress">
 						<div class="progress-bar w-75">Experienced</div>
 					</div>
-					GIT<div class="progress">
-						<div class="progress-bar w-75">Experienced</div>
-					</div>
-					CI/CD<div class="progress">
-						<div class="progress-bar w-50">Skillful</div>
-					</div>
-					Jinja2<div class="progress">
-						<div class="progress-bar w-50">Skillful</div>
-					</div>
-					JavaScript<div class="progress">
-						<div class="progress-bar w-25">Beginner</div>
-					</div>
-					Docker<div class="progress">
-						<div class="progress-bar w-25">Beginner</div>
-					</div>
-					React<div class="progress">
-						<div class="progress-bar w-50">Skillful</div>
-					</div>
-					Pandas<div class="progress">
-						<div class="progress-bar w-75">Experienced</div>
-					</div>
-					GraphQL<div class="progress">
-						<div class="progress-bar w-25">Beginner</div>
-					</div>
-					Excel VBA<div class="progress">
+					Pandas, Excel VBA<div class="progress">
 						<div class="progress-bar w-100">Expert</div>
-					</div>
-					SQL<div class="progress">
-						<div class="progress-bar w-100">Expert</div>
-					</div>
-					HTML/CSS<div class="progress">
-						<div class="progress-bar w-75">Experienced</div>
-					</div>
-					Bash<div class="progress">
-						<div class="progress-bar w-75">Experienced</div>
 					</div>
 					<div class="mt-4">
 						<figure><embed src="https://wakatime.com/share/@kordim/7a58b80c-b861-45b5-b3fb-ce597e4cf2c7.svg"></embed>
