--- a/index.html
+++ b/index.html
@@ -316,14 +316,17 @@
 					Python, Poetry, Pip<div class="progress">
 						<div class="progress-bar w-75">Experienced</div>
 					</div>
-					FastAPI, Flask, Django<div class="progress">
+					FastAPI, Flask, Django, Pydantic<div class="progress">
 						<div class="progress-bar w-75">Experienced</div>
 					</div>
 					Celery, Dramatiq, TaskIQ<div class="progress">
 						<div class="progress-bar w-75">Experienced</div>
 					</div>
-					MongoDB, Postgres, MS SQL, Orecle<div class="progress">
+					MongoDB, Postgres, MS SQL, Orecle, SQLAlchemy<div class="progress">
 						<div class="progress-bar w-75">Experienced</div>
+					</div>
+					RabbitMQ, Redis, Kafka<div class="progress">
+						<div class="progress-bar w-50">Skillful</div>
 					</div>
 					GIT, CI/CD, GitLab CI, Docker, Bash<div class="progress">
 						<div class="progress-bar w-75">Experienced</div>
