--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 							<h5 class="mb-1">Full stack developer at Sberbank</h5>
 							<small class="text-muted">Dec.2013 - Nowadays</small>
 						</div>
-						<p class="mb-1">MSSQL developer, python developer, nlp, chat bot creator, VBA developer</p>
+						<p class="mb-1">MSSQL developer, Python developer, React developer, nlp, chat bot creator, VBA developer</p>
 						<small class="text-muted">www.sberbank.ru</small>
 					</a>
 					<a href="https://skbbank.ru/" target="_blank" rel="noopener noreferrer"
