--- a/index.html
+++ b/index.html
@@ -322,10 +322,10 @@
 					Celery, Dramatiq, TaskIQ<div class="progress">
 						<div class="progress-bar w-75">Experienced</div>
 					</div>
-					MongoDB, Postgres, MS SQL, Orecle, SQLAlchemy<div class="progress">
+					Postgres, MS SQL, Orecle, SQLAlchemy<div class="progress">
 						<div class="progress-bar w-75">Experienced</div>
 					</div>
-					RabbitMQ, Redis, Kafka<div class="progress">
+					MongoDB, RabbitMQ, Redis, Kafka<div class="progress">
 						<div class="progress-bar w-50">Skillful</div>
 					</div>
 					GIT, CI/CD, GitLab CI, Docker, Bash<div class="progress">
