--- a/index.html
+++ b/index.html
@@ -22,13 +22,11 @@
 					<div class="col-md-8">
 						<h1>Dmitry Korzunin</h1>
 						<h4>Python Developer</h4>
-						<p>
-							<h3>Details</h3>
-						</p>
-						<p>Phone: <a href="tel:+79024429799" target="_blank" rel="noopener noreferrer">+79024429799</a></p>
-						<p>Telegram: <a href="https://t.me/dmitry_korzunin" target="_blank"
-								rel="noopener noreferrer">@dmitry_korzunin</a></p>
-						<p>E-mail: <a href="mailto:k79024429799@gmail.com">k79024429799@gmail.com</a></p>
+						<h3>Details</h3>
+						Phone: <a href="tel:+79024429799" target="_blank" rel="noopener noreferrer">+79024429799</a><br>
+						Telegram: <a href="https://t.me/dmitry_korzunin" target="_blank"
+								rel="noopener noreferrer">@dmitry_korzunin</a><br>
+						E-mail: <a href="mailto:k79024429799@gmail.com">k79024429799@gmail.com</a>
 					</div>
 				</div>
 				<div class="row">
