--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<div class="row">
 					<div class="col-md-12">
 						<h3>Profile:</h3>
-						<p>Python, SQL, VBA developer with 5+ years experience</p>
+						<p>With extensive experience in developing web applications using Python, FastAPI, Django, React, and databases, I am a highly skilled software engineer. I have a deep understanding of financial services and cryptocurrency markets, and have applied my technical abilities to deliver innovative solutions for clients. My proficiency enables me to build high-performance and scalable applications. I am excited to bring my technical expertise, financial services and cryptocurrency knowledge to contribute to a company's success.</p>
 					</div>
 				</div>
 				<div class="row">
@@ -56,7 +56,12 @@
 							<h5 class="mb-1">Backend Python developer (part time)</h5>
 							<small class="text-muted">Jul.2021 - Nowadays</small>
 						</div>
-						<p class="mb-1">Financial services and Cryptocurrency</p>
+						<p class="mb-1">Developed and maintained web-based financial services using Python, FastAPI and Django.</p>
+						<p class="mb-1">Utilized databases such as PostgreSQL and MongoDB to store and retrieve financial data.</p>
+						<p class="mb-1">Implemented cryptocurrency payment integration for online transactions.</p>
+						<p class="mb-1">Optimized application performance and scalability through profiling and refactoring.</p>
+						<p class="mb-1">Collaborated with the team to design and implement new features, and fix bugs.
+						</p>
 						<small class="text-muted">www.elastoo.com</small>
 					</a>
 					<a href="https://www.sberbank.ru/" target="_blank" rel="noopener noreferrer"
@@ -65,7 +70,10 @@
 							<h5 class="mb-1">Full stack developer at Sberbank</h5>
 							<small class="text-muted">Dec.2013 - Nowadays</small>
 						</div>
-						<p class="mb-1">MSSQL developer, Python developer, React developer, nlp, chat bot creator, VBA developer</p>
+						<p class="mb-1">Developed and maintained complex enterprise applications using MSSQL, Python, React and VBA.</p>
+						<p class="mb-1">Worked on the development of chatbots and natural language processing (NLP) systems.</p>
+						<p class="mb-1">Implemented new features and functionalities on the existing applications using MSSQL, Python and VBA.</p>
+						<p class="mb-1">Participated in code reviews, mentored junior developers, and contributed to the development of best practices and standards.</p>
 						<small class="text-muted">www.sberbank.ru</small>
 					</a>
 					<a href="https://skbbank.ru/" target="_blank" rel="noopener noreferrer"
@@ -74,7 +82,9 @@
 							<h5 class="mb-1">Lead Credit Manager as SKB-bank</h5>
 							<small class="text-muted">2007 - 2013</small>
 						</div>
-						<p class="mb-1">Sales, support of credit transactions, work with clients, reports automation.</p>
+						<p class="mb-1">Responsible for the sales and support of credit transactions for clients.</p>
+						<p class="mb-1">Worked closely with clients to understand their financial needs and provided tailored solutions.</p>
+						<p class="mb-1">Automated the process of generating reports and implemented new tools to improve efficiency.</p>
 						<small class="text-muted">skbbank.ru</small>
 					</a>
 				</div>
