--- a/index.html
+++ b/index.html
@@ -56,12 +56,13 @@
 							<h5 class="mb-1">Backend Python developer (part time)</h5>
 							<small class="text-muted">Jul.2021 - Nowadays</small>
 						</div>
-						<p class="mb-1">Developed and maintained web-based financial services using Python, FastAPI and Django.</p>
-						<p class="mb-1">Utilized databases such as PostgreSQL and MongoDB to store and retrieve financial data.</p>
-						<p class="mb-1">Implemented cryptocurrency payment integration for online transactions.</p>
-						<p class="mb-1">Optimized application performance and scalability through profiling and refactoring.</p>
-						<p class="mb-1">Collaborated with the team to design and implement new features, and fix bugs.
-						</p>
+						<ul class="text-muted mb-1">
+							<li>Developed and maintained web-based financial services using Python, FastAPI and Django.</li>
+							<li>Utilized databases such as PostgreSQL and MongoDB to store and retrieve financial data.</li>
+							<li>Implemented cryptocurrency payment integration for online transactions.</li>
+							<li>Optimized application performance and scalability through profiling and refactoring.</li>
+							<li>Collaborated with the team to design and implement new features, and fix bugs.</li>
+						</ul>
 						<small class="text-muted">www.elastoo.com</small>
 					</a>
 					<a href="https://www.sberbank.ru/" target="_blank" rel="noopener noreferrer"
@@ -70,10 +71,13 @@
 							<h5 class="mb-1">Full stack developer at Sberbank</h5>
 							<small class="text-muted">Dec.2013 - Nowadays</small>
 						</div>
-						<p class="mb-1">Developed and maintained complex enterprise applications using MSSQL, Python, React and VBA.</p>
-						<p class="mb-1">Worked on the development of chatbots and natural language processing (NLP) systems.</p>
-						<p class="mb-1">Implemented new features and functionalities on the existing applications using MSSQL, Python and VBA.</p>
-						<p class="mb-1">Participated in code reviews, mentored junior developers, and contributed to the development of best practices and standards.</p>
+						<ul class="text-muted mb-1">
+							<li>Development of a front-end chat bot for a support service using React, OData, WebSocket technologies.</li>
+							<li>Developed and maintained complex enterprise applications using MSSQL, Python, React and VBA.</li>
+							<li>Worked on the development of chatbots and natural language processing (NLP) systems.</li>
+							<li>Implemented new features and functionalities on the existing applications using MSSQL, Python and VBA.</li>
+							<li>Participated in code reviews, mentored junior developers, and contributed to the development of best practices and standards.</li>
+						</ul>
 						<small class="text-muted">www.sberbank.ru</small>
 					</a>
 					<a href="https://skbbank.ru/" target="_blank" rel="noopener noreferrer"
@@ -82,9 +86,11 @@
 							<h5 class="mb-1">Lead Credit Manager as SKB-bank</h5>
 							<small class="text-muted">2007 - 2013</small>
 						</div>
-						<p class="mb-1">Responsible for the sales and support of credit transactions for clients.</p>
-						<p class="mb-1">Worked closely with clients to understand their financial needs and provided tailored solutions.</p>
-						<p class="mb-1">Automated the process of generating reports and implemented new tools to improve efficiency.</p>
+						<ul class="text-muted mb-1">
+							<li>Responsible for the sales and support of credit transactions for clients.</li>
+							<li>Worked closely with clients to understand their financial needs and provided tailored solutions.</li>
+							<li>Automated the process of generating reports and implemented new tools to improve efficiency.</li>
+						</ul>
 						<small class="text-muted">skbbank.ru</small>
 					</a>
 				</div>
