--- a/index.html
+++ b/index.html
@@ -306,13 +306,32 @@
 						</div>
 					</div>
 				</div>
-				<div class="list-group">
+				<div class="list-group pt-3">
 					<h3>Language:</h3>
 					<a href="#" class="list-group-item list-group-item-action flex-column align-items-start" data-toggle="modal"
 						data-target=".english">
 						<div class="d-flex w-100 justify-content-between">
 							<h5 class="mb-1">English - B1</h5>
 						</div>
+					</a>
+				</div>
+				<div class="list-group pt-3">
+					<h3>Portfolio:</h3>
+					<a href="https://explanica.com" class="list-group-item list-group-item-action flex-column align-items-start">
+						<h5 class="mb-1">explanica.com</h5>
+						<p class="mb-1">Search and summarization service. <br>Backend - FastApi, Frontend - Vue</p>
+					</a>
+					<a href="https://line-f.ru/" class="list-group-item list-group-item-action flex-column align-items-start">
+						<h5 class="mb-1">armsline.ru</h5>
+						<p class="mb-1">Online store for weapons and ammunition using the Django framework</p>
+					</a>
+					<a href="https://marketfilibusters.com/" class="list-group-item list-group-item-action flex-column align-items-start">
+						<h5 class="mb-1">Blog Generator</h5>
+						<p class="mb-1">News parser and blog generator using the FastApi, Hugo blogs, Selenium etc.</p>
+					</a>
+					<a href="https://marketfilibusters.com/" class="list-group-item list-group-item-action flex-column align-items-start">
+						<h5 class="mb-1">Blog Generator</h5>
+						<p class="mb-1">News parser and blog generator using the FastApi, Hugo blogs, Selenium etc.</p>
 					</a>
 				</div>
 				<div class="modal fade english" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
